Use Stream#toList() instead of collect() (#311)
toList was added in Java 16, and some streams can perform a more optimized operation compared to Collectors.toList().