@@ -9,7 +9,6 @@ import java.io.UncheckedIOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -66,7 +65,7 @@ public class DirectoryCodeResolver implements CodeResolver {
                     .filter(p -> !Files.isDirectory(p))
                     .map(p -> root.relativize(p).toString().replace('\\', '/'))
                     .filter(IoUtils::isTemplateFile)
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (IOException e) {
             throw new UncheckedIOException("Failed to resolve all templates in " + root, e);
         }
